syntax = "proto3";

option csharp_namespace = "DuplexStreaming2";


service Notifier2 {
	rpc SendNotification(stream RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
	string Message = 1;
}

message ResponseMessage {
	string Message = 1;
}